# TonexOneController

./: FirmwareDevelopment.md  FirmwareUploading.md  HardwarePlatforms.md  LICENSE  README.md  WebConfiguration.md  web_configuration.md
.github/workflows/: ci.yaml
Releases/V1.0.3.2/: readme.md
Releases/V1.0.4.1/: readme.md
Releases/V1.0.6.1/: readme.md
Releases/V1.0.7.2/: readme.md
Releases/beta/: readme.md
Releases/special/: readme.md
build_distrib/: build.bat  build_distrib.py
build_distrib/template_cust_partition/configure/esp32s3/: multi_download.conf
build_distrib/template_cust_partition/configure/esp8266/: hspi_download.conf
build_distrib/template_cust_partition/dl_temp/bin_tmp/downloadPanel1/: bootloader.bin_rep
build_distrib/template_def_partition/configure/esp32s3/: multi_download.conf  utility.conf
build_distrib/template_def_partition/configure/esp8266/: utility.conf
build_distrib/template_def_partition/dl_temp/_temp_by_dltool/downloadPanel1/: bootloader.bin_rep
minimidi/source/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
minimidi/source/components/blemidi/: CMakeLists.txt  blemidi.c
minimidi/source/components/blemidi/include/: blemidi.h
minimidi/source/main/: CMakeLists.txt  minimidi.c
source/: .gitignore  CMakeLists.txt  esp_idf_project_configuration.json  partitions.csv  partitions_zero.csv  sdkconfig  sdkconfig .ws43devonly  sdkconfig.defaults  sdkconfig.devkitc  sdkconfig.devkitc_N16R8  sdkconfig.devkitc_N8R2  sdkconfig.m5atoms3r  sdkconfig.old  sdkconfig.ws169  sdkconfig.ws169t  sdkconfig.ws43B_as  sdkconfig.ws43B_ps  sdkconfig.ws43devonly  sdkconfig.wszero
source/components/espressif__esp_lcd_gc9107/: esp_lcd_gc9107.c  idf_component.yml
source/components/espressif__esp_lcd_gc9107/include/: esp_lcd_gc9107.h
source/components/espressif__esp_lcd_touch_gt911/: esp_lcd_touch_gt911.c
source/components/lvgl__lvgl/: Kconfig
source/components/lvgl__lvgl/examples/: readme.txt
source/components/lvgl__lvgl/src/extra/themes/default/: lv_theme_default.c
source/components/lvgl__lvgl/src/extra/widgets/: lv_widgets.h
source/components/lvgl__lvgl/src/extra/widgets/dclock/: lv_dclock.c  lv_dclock.h
source/main/: CH422G.c  CH422G.h  CMakeLists.txt  Kconfig.projbuild  LP5562.c  LP5562.h  SX1509.c  SX1509.h  control.c  control.h  display.c  display.h  footswitches.c  footswitches.h  idf_component.yml  index.html  leds.c  leds.h  main.c  main.h  midi_control.c  midi_control.h  midi_helper.c  midi_helper.h  midi_serial.c  midi_serial.h  task_priorities.h  tonex_params.c  tonex_params.h  usb_comms.c  usb_comms.h  usb_tonex_one.c  usb_tonex_one.h  wifi_config.c  wifi_config.h
source/main/ui_generated/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
source/main/ui_generated/components/: ui_comp_hook.c
source/main/ui_generated/images/: ui_img_arrow_left_png.c  ui_img_arrow_right_png.c  ui_img_bt_conn_png.c  ui_img_bt_disconn_png.c  ui_img_effect_icon_amp_off_png.c  ui_img_effect_icon_amp_on_png.c  ui_img_effect_icon_cab_off_png.c  ui_img_effect_icon_cab_on_png.c  ui_img_effect_icon_comp_off_png.c  ui_img_effect_icon_comp_on_png.c  ui_img_effect_icon_delay_off_png.c  ui_img_effect_icon_delay_on_png.c  ui_img_effect_icon_gate_off_png.c  ui_img_effect_icon_gate_on_png.c  ui_img_effect_icon_mod_off_png.c  ui_img_effect_icon_mod_on_png.c  ui_img_effect_icon_reverb_off_png.c  ui_img_effect_icon_reverb_on_png.c  ui_img_ik_png.c  ui_img_ikw_png.c  ui_img_led_off_png.c  ui_img_led_on_png.c  ui_img_logo_png.c  ui_img_next_down_png.c  ui_img_next_png.c  ui_img_previous_down_png.c  ui_img_previous_png.c  ui_img_pskin_arion_png.c  ui_img_pskin_bigmuff_png.c  ui_img_pskin_darkglass_png.c  ui_img_pskin_dod_png.c  ui_img_pskin_ehx_png.c  ui_img_pskin_fender_png.c  ui_img_pskin_fulltone_png.c  ui_img_pskin_fzs_png.c  ui_img_pskin_jhs_png.c  ui_img_pskin_klon_png.c  ui_img_pskin_landgraf_png.c  ui_img_pskin_mxr2_png.c  ui_img_pskin_mxr_png.c  (+48 more)
source/main/ui_generated/screens/: ui_Screen1.c  ui_Settings.c
source/main/ui_generated_085/: CMakeLists.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
source/main/ui_generated_085/components/: ui_comp_hook.c
source/main/ui_generated_085/images/: ui_img_bt_conn_png.c  ui_img_bt_disconn_png.c  ui_img_smythbuilt_png.c  ui_img_usb_fail_png.c  ui_img_usb_ok_png.c  ui_img_wifi_conn_png.c  ui_img_wifi_disconn_png.c
source/main/ui_generated_085/screens/: ui_Screen1.c
source/main/ui_generated_169/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
source/main/ui_generated_169/components/: ui_comp_hook.c
source/main/ui_generated_169/images/: ui_img_bt_conn_png.c  ui_img_bt_disconn_png.c  ui_img_smythbuilt_png.c  ui_img_usb_fail_png.c  ui_img_usb_ok_png.c  ui_img_wifi_conn1_png.c  ui_img_wifi_conn_png.c  ui_img_wifi_disconn1_png.c  ui_img_wifi_disconn_png.c
source/main/ui_generated_169/screens/: ui_Screen1.c
ui_design/: Tonex_Controller.sll  Tonex_Controller.spj  Tonex_Controller_events.py  amp_skins.psd  pedal_skins.psd  readme.md
ui_design_0.85/: CMakeLists.txt  TonexOneController_085pj.sll  TonexOneController_085pj.spj
ui_design_1.69/: TonexOneController_1.69pj.sll  TonexOneController_1.69pj.spj  filelist.txt
