idf_component_register(SRCS "midi_control.c" "control.c" "footswitches.c" "CH422G.c" "display.c" "main.c" "usb_comms.c" "usb_tonex_one.c" "ui_generated/ui.c" "ui_generated/ui_helpers.c" "CH422G.c" "midi_serial.c"
                            "ui_generated/images/ui_img_smythbuilt_png.c" "ui_generated/screens/ui_Screen1.c" "ui_generated/components/ui_comp_hook.c"
                            "ui_generated/images/ui_img_ik_png.c" "ui_generated/images/ui_img_led_off_png.c" "ui_generated/images/ui_img_led_on_png.c"  "ui_generated/images/ui_img_logo_png.c" 
			                "ui_generated/images/ui_img_usb_fail_png.c" "ui_generated/images/ui_img_next_png.c" "ui_generated/images/ui_img_previous_png.c" "ui_generated/images/ui_temporary_image.c"
                            "ui_generated/images/ui_img_ikw_png.c" "ui_generated/images/ui_img_usb_ok_png.c" "ui_generated/images/ui_img_next_down_png.c" "ui_generated/images/ui_img_previous_down_png.c"
                            "ui_generated/images/ui_img_skin_2001rb_png.c" "ui_generated/images/ui_img_skin_5150_png.c" "ui_generated/images/ui_img_skin_acoustic360_png.c"
                            "ui_generated/images/ui_img_skin_b18n_png.c" "ui_generated/images/ui_img_skin_b51n_png.c" "ui_generated/images/ui_img_skin_bluesdeluxe_png.c"
                            "ui_generated/images/ui_img_skin_customdeluxe_png.c" "ui_generated/images/ui_img_skin_deville_png.c" "ui_generated/images/ui_img_skin_dualrectifier_png.c"
                            "ui_generated/images/ui_img_skin_goldfinger_png.c" "ui_generated/images/ui_img_skin_invader_png.c" "ui_generated/images/ui_img_skin_jazzchorus_png.c"
                            "ui_generated/images/ui_img_skin_jcm800_png.c" "ui_generated/images/ui_img_skin_or50_png.c" "ui_generated/images/ui_img_skin_powerball_png.c"
                            "ui_generated/images/ui_img_skin_princeton_png.c" "ui_generated/images/ui_img_skin_rockerverb_png.c" "ui_generated/images/ui_img_skin_twinreverb_png.c"
                            "ui_generated/images/ui_img_skin_svtcl_png.c" "ui_generated/images/ui_img_skin_invader_png.c"
                            "ui_generated/images/ui_img_skin_maverick_png.c" "ui_generated/images/ui_img_skin_mk3_png.c"
                            "ui_generated/images/ui_img_skin_superbass_png.c" "ui_generated/images/ui_img_skin_trinity_png.c"
                            "ui_generated/images/ui_img_skin_dumble_png.c" "ui_generated/images/ui_img_skin_jetcity_png.c"
                            "ui_generated/images/ui_img_skin_ac30_png.c" "ui_generated/images/ui_img_skin_evh5150_png.c"
                            "ui_generated/images/ui_img_skin_tinyterror_png.c" "ui_generated/images/ui_img_skin_2020_png.c"
                            "ui_generated/images/ui_img_skin_pinktaco_png.c" "ui_generated/images/ui_img_skin_supro50_png.c"
                            "ui_generated/images/ui_img_skin_diezel_png.c"
                            "ui_generated/images/ui_img_arrow_left_png.c" "ui_generated/images/ui_img_arrow_right_png.c" "ui_generated/images/ui_img_tick_png.c"
                            "ui_generated/images/ui_img_bt_conn_png.c" "ui_generated/images/ui_img_bt_disconn_png.c"
                            INCLUDE_DIRS "." "./" "ui_generated")
